# zephyr

./: CODEOWNERS  west.yml
arch/: Kconfig
arch/riscv/: Kconfig
arch/riscv/core/: CMakeLists.txt  fatal.c  gdbstub.c
boards/riscv/ai_wb2_12f/: ai_wb2_12f-pinctrl.dtsi  ai_wb2_12f.dts  board.cmake
boards/tinyvision/: index.rst
boards/tinyvision/pico_ice/: Kconfig  Kconfig.defconfig  Kconfig.pico_ice  board.yml  (+3 more)
drivers/adc/: CMakeLists.txt  Kconfig  Kconfig.bflb  adc_bflb.c
drivers/clock_control/: clock_control_wch_rcc.c
drivers/dac/: CMakeLists.txt  Kconfig  Kconfig.bflb  dac_bflb.c
drivers/eeprom/: CMakeLists.txt  Kconfig  Kconfig.bflb  eeprom_bflb.c
drivers/flash/: CMakeLists.txt  Kconfig  Kconfig.bflb  flash_bflb.c
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.bflb  gpio_bflb.c  gpio_bflb_bl61x.c  wch_gpio_ch32v00x.c
drivers/i2c/: CMakeLists.txt  Kconfig  Kconfig.bflb  i2c_bflb.c
drivers/pinctrl/: CMakeLists.txt  Kconfig  pinctrl_bflb.c  pinctrl_wch_afio_20x_30x.c
drivers/serial/: CMakeLists.txt  Kconfig  Kconfig.bflb  uart_bflb.c  uart_bflb2.c
drivers/spi/: CMakeLists.txt  Kconfig  Kconfig.bflb  spi_bflb.c
drivers/timer/: Kconfig.riscv_machine  riscv_machine_timer.c
drivers/wifi/: CMakeLists.txt  Kconfig
dts/bindings/: vendor-prefixes.txt
dts/riscv/: neorv32.dtsi  renode_riscv32_virt.dtsi
modules/: Kconfig
modules/easyflash4/: CMakeLists.txt
modules/hal_bouffalolab/: CMakeLists.txt  Kconfig  bl602.cmake  bl702.cmake
modules/hal_bouffalolab/include/bl602/: supplementary.h
modules/hal_bouffalolab/include/common/: bflb_uart.h
(+168 files in other folders)
